--- a/Arc_Ai/Arc_Ai/core/templates/core/admin_project_page.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/admin_project_page.html
@@ -66,7 +66,10 @@
             <p><a href="{% url 'core:admin_files_page' %}" class="{% if active_page == 'saved' %}active{% endif %}">Files</a></p>
         </div>
         <div>
-            <button class="logout">Log out</button>
+            <form method="post" action="{% url 'core:logout' %}" style="display: inline;">
+            {% csrf_token %}
+            <button type="submit" class="logout">Log out</button>
+            </form>
         </div>
     </div>
 
