--- a/Arc_Ai/Arc_Ai/core/templates/core/admin_users_page.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/admin_users_page.html
@@ -61,12 +61,15 @@
         <img id="logo" src="{% static 'Images/Logo.png' %}" alt="ARC.AI Logo">
     </div>
     <div id="header_nav" class="text_white">
-        <p><a href="{% url 'core:home' %}" class="{% if active_page == 'home' %}active{% endif %}">Users</a></p>
+        <p><a href="{% url 'core:admin_users_page' %}" class="{% if active_page == 'home' %}active{% endif %}">Users</a></p>
         <p><a href="{% url 'core:organization' %}" class="{% if active_page == 'organization' %}active{% endif %}">Projects</a></p>
-        <p><a href="{% url 'core:saved' %}" class="{% if active_page == 'saved' %}active{% endif %}">Files</a></p>
+        <p><a href="{% url 'core:admin_files_page' %}" class="{% if active_page == 'saved' %}active{% endif %}">Files</a></p>
     </div>
     <div>
-        <button class="logout">Log out</button>
+                <form method="post" action="{% url 'core:logout' %}" style="display: inline;">
+            {% csrf_token %}
+            <button type="submit" class="logout">Log out</button>
+            </form>
     </div>
 </div>
 
